--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.8.2"
   },
   "scripts": {
     "start": "node server.js",
